@@ -130,6 +130,10 @@ OTHER CHANGES:
 
  o Recommended version of Commons Logging has been upgraded to v1.1.1.
 
+ o Recommended version of JUnit has been upgraded to v3.8.2.
+
+ o An experimental Maven2 build has been added in v0.7.
+
 ABOUT COMMONS SCXML:
 
 The Commons SCXML (State Chart XML) project provides a generic
